add multitasking for maven test