@@ -248,8 +248,9 @@
 				<version>2.17</version>
 				<configuration>
 					<useFile>false</useFile>
-					<parallel>methods</parallel>
-					<threadCount>5</threadCount>
+					<forkCount>2</forkCount>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					<reuseForks>true</reuseForks>
 				</configuration>
 			</plugin>
 			</plugins>
